Shorten the comments and take the review's suggestions