@@ -9,11 +9,13 @@
  */
 package org.openmrs.module.smartonfhir.util;
 
+import static java.util.stream.Collectors.toUnmodifiableSet;
+
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jose.jwk.source.JWKSource;
@@ -27,37 +29,24 @@ import lombok.extern.slf4j.Slf4j;
 import org.openmrs.module.smartonfhir.model.SmartOAuth2Config;
 
 /**
- * Verifies the SMART access tokens presented on FHIR requests.
- * <p>
- * What it checks, and why each matters:
- * <ul>
- * <li><strong>Signature</strong>, against the authorization server's published keys. Without it any
- * self-issued token would be accepted.</li>
- * <li><strong>{@code iss}</strong>, exactly. A valid token from a different authorization server is
- * still not a token for this server.</li>
- * <li><strong>{@code aud}</strong>, against this FHIR server's base URL. SMART App Launch 2.x
- * requires it: an app may hold a legitimate token for another FHIR server, and without this check
- * that token would be replayable here.</li>
- * <li><strong>{@code exp}</strong>, required rather than merely honoured when present, so a token
- * without an expiry is rejected instead of lasting forever.</li>
- * </ul>
- * Asymmetric signatures only. The authorization server signs access tokens with a key it alone
- * holds, so accepting an HMAC algorithm here would mean accepting a token signed with a secret this
- * module also knows.
+ * Verifies SMART access tokens: signature, {@code iss}, {@code aud} and a required {@code exp}.
+ * Asymmetric algorithms only, so no token this module could itself sign is ever accepted.
  */
 @Slf4j
 public class SmartAccessTokenVerifier {
 
-	private static final Set<JWSAlgorithm> PERMITTED_ALGORITHMS = new HashSet<>(
+	private static final Set<JWSAlgorithm> ASYMMETRIC_ALGORITHMS = new HashSet<>(
 	        Arrays.asList(JWSAlgorithm.RS256, JWSAlgorithm.RS384, JWSAlgorithm.RS512, JWSAlgorithm.ES256, JWSAlgorithm.ES384,
 	            JWSAlgorithm.ES512, JWSAlgorithm.PS256, JWSAlgorithm.PS384, JWSAlgorithm.PS512));
+
+	private static final Pattern WHITESPACE = Pattern.compile("\\s+");
 
 	private final SmartOAuth2Config config;
 
 	private final ConfigurableJWTProcessor<SecurityContext> processor;
 
 	/**
-	 * @param config the configured issuer and audience
+	 * @param config the configured issuer, audience and accepted algorithms
 	 * @param keySource where to obtain the authorization server's signing keys. Injected rather than
 	 *            built here so that tests can supply a fixed key set instead of reaching the network.
 	 */
@@ -65,16 +54,12 @@ public class SmartAccessTokenVerifier {
 		this.config = config;
 		this.processor = new DefaultJWTProcessor<>();
 
-		processor.setJWSKeySelector(new JWSVerificationKeySelector<>(PERMITTED_ALGORITHMS, keySource));
+		processor.setJWSKeySelector(new JWSVerificationKeySelector<>(permittedAlgorithms(config), keySource));
 
-		// exp is required. nimbus only enforces claims named here as required, so leaving it out would
-		// let a token with no expiry through.
+		// nimbus enforces only the claims named here, so omitting exp would admit an endless token.
 		List<String> required = Arrays.asList("exp", "iss", "aud");
 
-		// Only the issuer is matched exactly. The audience is handled by the requiredAudience argument
-		// below, which asks whether this server is *among* the audiences, as RFC 7519 defines the check.
-		// Matching aud exactly would reject a legitimately multi-audience token -- which Keycloak issues
-		// routinely, often including "account" -- without making anything safer.
+		// aud is checked for membership per RFC 7519, since Keycloak issues multi-audience tokens.
 		JWTClaimsSet expected = new JWTClaimsSet.Builder().issuer(config.getIssuer()).build();
 
 		DefaultJWTClaimsVerifier<SecurityContext> claimsVerifier = new DefaultJWTClaimsVerifier<>(config.getAudience(),
@@ -86,94 +71,84 @@ public class SmartAccessTokenVerifier {
 	/**
 	 * Verifies a bearer token and extracts what the FHIR layer needs from it.
 	 *
-	 * @return the token's details, or null if it is not acceptable. The reason is logged; callers
-	 *         should answer with a generic {@code invalid_token} rather than relaying it, so that a
-	 *         caller cannot probe for which check failed.
+	 * @return its details, or null if unacceptable. Answer {@code invalid_token} rather than relaying
+	 *         the logged reason, so a caller cannot probe for which check failed.
 	 */
 	public SmartAccessToken verify(String bearerToken) {
-		if (bearerToken == null || bearerToken.trim().isEmpty()) {
+		if (bearerToken == null || bearerToken.isBlank()) {
 			return null;
 		}
 
 		final JWTClaimsSet claims;
 		try {
-			claims = processor.process(bearerToken.trim(), null);
+			claims = processor.process(bearerToken, null);
 		}
 		catch (Exception e) {
-			// nimbus reports signature, issuer, audience, expiry and algorithm failures alike as
-			// exceptions; none of the detail is safe to hand back to the caller.
-			log.warn("Rejected a SMART access token: {}", e.getMessage());
+			// nimbus reports every failure as an exception, and none of the detail is safe to return.
+			log.warn("Rejected a SMART access token: {}", e.getMessage(), e);
 			return null;
 		}
 
 		String username = claimAsString(claims, config.getUsernameClaim());
 
-		if (username == null || username.trim().isEmpty()) {
-			// Nearly always a client that was never granted the scope carrying this claim. Its launch
-			// succeeds, so the failure surfaces as a 401 on every FHIR call with nothing to connect it
-			// to a scope. Naming the remedy here is the only place anyone will find it.
+		if (username == null) {
+			// Nearly always a client never granted the scope that carries this claim.
 			log.warn(
 			    "A SMART access token passed verification but carries no '{}' claim, so it names no OpenMRS user. "
-			            + "Grant this client the authorization server scope that emits that claim (the 'profile' scope "
-			            + "in the OpenMRS realm), or set usernameClaim in smart-oauth2.json to a claim it does emit.",
+			            + "Grant this client the scope that emits that claim, or configure a claim it does emit.",
 			    config.getUsernameClaim());
 			return null;
 		}
 
-		return new SmartAccessToken(username.trim(), claimAsString(claims, "patient"), claimAsString(claims, "encounter"),
+		return new SmartAccessToken(username, claimAsString(claims, "patient"), claimAsString(claims, "encounter"),
 		        scopesFrom(claims));
 	}
 
+	/** Only asymmetric algorithms are honoured; anything else configured is ignored and logged. */
+	private static Set<JWSAlgorithm> permittedAlgorithms(SmartOAuth2Config config) {
+		String configured = config.getSignatureAlgorithms();
+
+		if (configured == null || configured.isBlank()) {
+			return ASYMMETRIC_ALGORITHMS;
+		}
+
+		Set<JWSAlgorithm> permitted = WHITESPACE.splitAsStream(configured.trim()).map(JWSAlgorithm::parse)
+		        .filter(ASYMMETRIC_ALGORITHMS::contains).collect(toUnmodifiableSet());
+
+		if (permitted.isEmpty()) {
+			log.warn("None of the configured signature algorithms ({}) are asymmetric; falling back to all of them",
+			    configured);
+			return ASYMMETRIC_ALGORITHMS;
+		}
+
+		return permitted;
+	}
+
+	/** Bare strings only; a structured claim here is not something to coerce with toString(). */
 	private String claimAsString(JWTClaimsSet claims, String name) {
 		Object value = claims.getClaim(name);
-		return value == null ? null : value.toString();
+
+		if (!(value instanceof String)) {
+			return null;
+		}
+
+		String text = ((String) value).trim();
+		return text.isEmpty() ? null : text;
 	}
 
 	private Set<String> scopesFrom(JWTClaimsSet claims) {
 		String scope = claimAsString(claims, "scope");
-
-		if (scope == null || scope.trim().isEmpty()) {
-			return Collections.emptySet();
-		}
-
-		return new HashSet<>(Arrays.asList(scope.trim().split("\\s+")));
+		return scope == null ? Set.of() : WHITESPACE.splitAsStream(scope).collect(toUnmodifiableSet());
 	}
 
 	/**
 	 * What a verified SMART access token tells us: which OpenMRS user is acting, the launch context the
 	 * authorization server granted, and the scopes it was granted with.
 	 */
-	public static final class SmartAccessToken {
+	public record SmartAccessToken(String username, String patient, String encounter, Set<String> scopes) {
 
-		private final String username;
-
-		private final String patient;
-
-		private final String encounter;
-
-		private final Set<String> scopes;
-
-		SmartAccessToken(String username, String patient, String encounter, Set<String> scopes) {
-			this.username = username;
-			this.patient = patient;
-			this.encounter = encounter;
-			this.scopes = Collections.unmodifiableSet(scopes);
-		}
-
-		public String getUsername() {
-			return username;
-		}
-
-		public String getPatient() {
-			return patient;
-		}
-
-		public String getEncounter() {
-			return encounter;
-		}
-
-		public Set<String> getScopes() {
-			return scopes;
+		public SmartAccessToken {
+			scopes = scopes == null ? Set.of() : Set.copyOf(scopes);
 		}
 
 		public boolean hasScope(String scope) {
