@@ -12,6 +12,7 @@ package org.openmrs.module.smartonfhir.util;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.util.Locale;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -22,61 +23,47 @@ import lombok.extern.slf4j.Slf4j;
 import org.openmrs.module.smartonfhir.model.SmartOAuth2Config;
 
 /**
- * Builds the {@link SmartAccessTokenVerifier} once and hands it out.
- * <p>
- * Construction is deferred to first use rather than done at module start, because it needs the
- * authorization server to be reachable: an OpenMRS that cannot start because Keycloak is not up yet
- * would be a poor trade. A failure here leaves SMART unavailable and everything else working.
- * <p>
- * Key retrieval is cached and rate-limited by nimbus's {@code JWKSourceBuilder} defaults. That matters:
- * a verifier that fetched JWKS per request would add a network round trip to every FHIR call, and would
- * turn a slow authorization server into slow FHIR responses. Cached, the common path is a signature
- * check against keys already in memory, and a key rotation is picked up on the next refresh.
+ * Builds the {@link SmartAccessTokenVerifier} on first use, because it needs the authorization
+ * server reachable; a failure leaves SMART unavailable and is retried by the next request.
  */
 @Slf4j
 public class SmartAccessTokenVerifierHolder {
 
-	private static final int DISCOVERY_TIMEOUT_MILLIS = 10_000;
-
 	private static volatile SmartAccessTokenVerifier verifier;
-
-	private static volatile boolean attempted = false;
 
 	private static volatile String resolvedJwksUri;
 
 	/**
-	 * @return the verifier, or null if SMART is unconfigured or the authorization server's keys could not
-	 *         be located. Callers must refuse the request in that case rather than accept it unverified.
+	 * @return the verifier, or null if SMART is unconfigured or the authorization server's keys could
+	 *         not be located. Callers must refuse the request in that case rather than accept it
+	 *         unverified.
 	 */
 	public static SmartAccessTokenVerifier getVerifier() {
-		if (!attempted) {
-			synchronized (SmartAccessTokenVerifierHolder.class) {
-				if (!attempted) {
-					build();
+		SmartAccessTokenVerifier built = verifier;
 
-					// Only latched once there is something to keep. It used to latch either way, so a single
-					// transient failure to reach the authorization server -- a slow start, a DNS blip --
-					// left this null and answered invalid_token to every FHIR request for the life of the
-					// JVM, with nothing in production able to reset it. Now a failed attempt is retried by
-					// the next request.
-					attempted = verifier != null;
+		if (built == null) {
+			synchronized (SmartAccessTokenVerifierHolder.class) {
+				built = verifier;
+
+				if (built == null) {
+					build();
+					built = verifier;
 				}
 			}
 		}
 
-		return verifier;
+		return built;
 	}
 
 	/** Discards the built verifier so the next call rebuilds it. For tests and for config changes. */
 	public static synchronized void reset() {
 		verifier = null;
 		resolvedJwksUri = null;
-		attempted = false;
 	}
 
 	/**
 	 * Where token signing keys are actually being fetched from, so the discovery document advertises
-	 * the same location the verifier uses rather than a second guess at it.
+	 * the same location the verifier uses.
 	 *
 	 * @return the JWKS URI, or null if it could not be determined
 	 */
@@ -95,18 +82,25 @@ public class SmartAccessTokenVerifierHolder {
 
 		String jwksUri = config.getJwksUri();
 
-		if (jwksUri == null || jwksUri.trim().isEmpty()) {
-			jwksUri = discoverJwksUri(config.getIssuer());
+		if (jwksUri == null || jwksUri.isBlank()) {
+			jwksUri = discoverJwksUri(config);
 		}
 
 		if (jwksUri == null) {
-			log.error("Could not determine the authorization server's JWKS location. Set 'jwks-uri' in "
-			        + "{} to avoid relying on discovery.", SmartOAuth2ConfigHolder.CONFIG_FILE_NAME);
+			log.error("Could not determine the authorization server's JWKS location. Set 'jwks_uri' in "
+			        + "{} to avoid relying on discovery.",
+			    SmartOAuth2ConfigHolder.CONFIG_FILE_NAME);
 			return;
 		}
 
 		try {
-			JWKSource<SecurityContext> keySource = JWKSourceBuilder.create(new URL(jwksUri.trim())).retrying(true).build();
+			JWKSourceBuilder<SecurityContext> keys = JWKSourceBuilder.create(new URL(jwksUri.trim())).retrying(true);
+
+			if (config.getJwksCacheSeconds() > 0) {
+				keys.cache(config.getJwksCacheSeconds() * 1000L, JWKSourceBuilder.DEFAULT_CACHE_REFRESH_TIMEOUT);
+			}
+
+			JWKSource<SecurityContext> keySource = keys.build();
 			verifier = new SmartAccessTokenVerifier(config, keySource);
 			resolvedJwksUri = jwksUri.trim();
 			log.info("SMART access tokens will be verified against {}", jwksUri);
@@ -117,17 +111,27 @@ public class SmartAccessTokenVerifierHolder {
 	}
 
 	/**
-	 * Reads {@code jwks_uri} from the issuer's OpenID Connect discovery document, so that a deployment
-	 * need only state the issuer. Keycloak publishes it, as does any conforming provider.
+	 * Reads {@code jwks_uri} from the issuer's discovery document, so only the issuer need be stated.
 	 */
-	private static String discoverJwksUri(String issuer) {
-		final String discoveryUrl = issuer.replaceAll("/+$", "") + "/.well-known/openid-configuration";
+	private static String discoverJwksUri(SmartOAuth2Config config) {
+		String issuer = config.getIssuer();
 
+		if (issuer == null || !isHttpUrl(issuer)) {
+			log.error("The configured issuer '{}' is not an http or https URL, so it cannot be discovered", issuer);
+			return null;
+		}
+
+		// Only the final slash is ever there to strip.
+		String base = issuer.endsWith("/") ? issuer.substring(0, issuer.length() - 1) : issuer;
+		final String discoveryUrl = base + "/.well-known/openid-configuration";
+		final int timeout = config.getDiscoveryTimeoutSeconds() * 1000;
+
+		HttpURLConnection connection = null;
 		try {
-			HttpURLConnection connection = (HttpURLConnection) new URL(discoveryUrl).openConnection();
+			connection = (HttpURLConnection) new URL(discoveryUrl).openConnection();
 			connection.setRequestMethod("GET");
-			connection.setConnectTimeout(DISCOVERY_TIMEOUT_MILLIS);
-			connection.setReadTimeout(DISCOVERY_TIMEOUT_MILLIS);
+			connection.setConnectTimeout(timeout);
+			connection.setReadTimeout(timeout);
 			connection.setRequestProperty("Accept", "application/json");
 
 			if (connection.getResponseCode() != HttpURLConnection.HTTP_OK) {
@@ -136,10 +140,9 @@ public class SmartAccessTokenVerifierHolder {
 			}
 
 			try (InputStream in = connection.getInputStream()) {
-				JsonNode discovered = new ObjectMapper().readTree(in);
-				JsonNode jwksUri = discovered.get("jwks_uri");
+				JsonNode jwksUri = new ObjectMapper().readTree(in).get("jwks_uri");
 
-				if (jwksUri == null || jwksUri.asText().isEmpty()) {
+				if (jwksUri == null || jwksUri.asText().isBlank()) {
 					log.error("{} advertises no jwks_uri", discoveryUrl);
 					return null;
 				}
@@ -151,5 +154,15 @@ public class SmartAccessTokenVerifierHolder {
 			log.error("Could not read {}", discoveryUrl, e);
 			return null;
 		}
+		finally {
+			if (connection != null) {
+				connection.disconnect();
+			}
+		}
+	}
+
+	private static boolean isHttpUrl(String value) {
+		String scheme = value.toLowerCase(Locale.ROOT);
+		return scheme.startsWith("http://") || scheme.startsWith("https://");
 	}
 }
