@@ -16,13 +16,7 @@ import java.nio.charset.StandardCharsets;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.util.UriComponentsBuilder;
 
-/**
- * How the launch target in a {@code token} parameter is read.
- * <p>
- * One place, because there used to be two that disagreed: the filter guarding the launch URLs and
- * the servlet behind it parsed the same parameter differently, and a request could be shaped so
- * that only one of them saw a launch token in it.
- */
+/** How the launch target in a {@code token} parameter is read, in one place so readers agree. */
 @Slf4j
 public class SmartLaunchTargets {
 
@@ -30,22 +24,13 @@ public class SmartLaunchTargets {
 	}
 
 	/**
-	 * The launch target as every reader of it must see it.
-	 * <p>
-	 * The value is a URL that has been encoded into a query parameter, so the servlet container decodes
-	 * it once and it has to be decoded once more to become a usable URL -- which also restores the
-	 * {@code {APP_TOKEN}} placeholder the authorization server expects back.
-	 * <p>
-	 * This exists because two readers disagreed. {@code AuthenticationByPassFilter} searched the
-	 * container-decoded value for {@code key=}, while the servlet decoded a second time before parsing,
-	 * so a doubly-encoded {@code %256Bey=} was invisible to the filter and a {@code key=} to the
-	 * servlet: the filter attempted no authentication and the servlet carried on regardless. Both call
-	 * this now.
+	 * The launch target as every reader of it must see it. The container decodes the parameter once,
+	 * and it needs decoding once more to become a usable URL with its {@code {APP_TOKEN}} placeholder.
 	 *
 	 * @return the decoded target, or null if there was nothing to decode
 	 */
 	public static String decodeLaunchTarget(String tokenParameter) {
-		if (tokenParameter == null || tokenParameter.trim().isEmpty()) {
+		if (tokenParameter == null || tokenParameter.isBlank()) {
 			return null;
 		}
 
@@ -60,10 +45,8 @@ public class SmartLaunchTargets {
 	}
 
 	/**
-	 * Reads one query parameter out of a launch target.
-	 * <p>
-	 * A real query parser rather than a substring search: {@code indexOf("key=")} also matches any
-	 * parameter whose name merely ends in {@code key}, so {@code ?monkey=x&key=real} yielded {@code x}.
+	 * Reads one query parameter out of a launch target, with a real parser rather than a substring
+	 * search that would also match a parameter merely ending in the name.
 	 *
 	 * @return the parameter's value, or null if the target is unparseable or does not carry it
 	 */
